test/libyul/yulSyntaxTests/invalid_type2.yul
{
    let x := 1:invalidType
}
// ----
// ParserError 5473: (15-28): Types are not valid in untyped Yul.
